syntax="proto3";

package dailyreport;

import "google/protobuf/timestamp.proto";

option go_package="./proto/dailyReport";

message DailyReport {
    string ReportID = 1;
    int32 SerialNumber = 2;
    string Date = 3;
    int32 Amount = 4;
    string Currency = 5;
    google.protobuf.Timestamp CreatedAt = 6;
    string CreatedBy = 7;
    google.protobuf.Timestamp UpdatedAt = 8;
    string UpdatedBy = 9;
    google.protobuf.Timestamp DeletedAt = 10;
    string DeletedBy = 11;
}

message Filter {
    int32 Offset = 1;
    int32 Limit = 2;
    string SortBy = 3;
    string Order = 4;
    string SearchTerm = 5;
}

message Stats {
    int32 Count = 1;
    int32 TotalAmount = 2;
}

message CreateDailyReportRequest {
    DailyReport Dre = 1;
}

message CreateDailyReportResponse {
    string ReportID = 1;
}

message GetDailyReportRequest {
    DailyReport Dre = 1;
}

message GetDailyReportResponse {
    DailyReport Dre = 1;
}

message UpdateDailyReportRequest {
    DailyReport Dre = 1;
}

message UpdateDailyReportResponse {
    DailyReport Dre = 1;
}

message DeleteDailyReportRequest {
    DailyReport Dre = 1;
}

message DeleteDailyReportResponse {}

message ListDailyReportRequest {
    Filter Filter = 1;
}

message ListDailyReportResponse {
   repeated DailyReport Dre = 1;
}

message DailyReportStatsRequest {
    Filter Filter = 1;
}

message DailyReportStatsResponse {
    Stats Stats = 1;
}

service DailyReportService {
    rpc CreateDailyReport(CreateDailyReportRequest) returns(CreateDailyReportResponse) {}
    rpc GetDailyReport(GetDailyReportRequest) returns(GetDailyReportResponse) {}
    rpc UpdateDailyReport(UpdateDailyReportRequest) returns(UpdateDailyReportResponse) {}
    rpc DeleteDailyReport(DeleteDailyReportRequest) returns(DeleteDailyReportResponse) {}
    rpc ListDailyReport(ListDailyReportRequest) returns(ListDailyReportResponse) {}
    rpc DailyReportStats(DailyReportStatsRequest) returns(DailyReportStatsResponse) {}
}